--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: multi-user-blog-1340
+application: multi-user-blog
 version: 1
 runtime: python27
 api_version: 1
@@ -19,5 +19,6 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
+  
 - name: jinja2
   version: "2.6"
