--- a/index.yaml
+++ b/index.yaml
@@ -10,3 +10,14 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: Comment
+  ancestor: yes
+  properties:
+  - name: created
+    direction: desc
+
+- kind: Post
+  properties:
+  - name: author_lower
+  - name: created
+    direction: desc
